force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Background_Image_Opacity__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Background_Image_Opacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Set image opacity.</description>
    <inlineHelpText>Choose the opacity level for the background image in the survey response interface. Use a scale of 0 to 1, where 0 indicates complete transparency and 1 indicates full opacity. Adjusting the image opacity allows you to control the visibility of the background image, creating different visual effects and blending it seamlessly with other elements of the survey interface.</inlineHelpText>
    <label>Background Image Opacity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>