force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Batch_Job_ID__c</fullName>
    <description>Apex Job ID of the on going batch, which is used before processing another job request.</description>
    <inlineHelpText>Apex Job ID of the on going batch, which is used before processing another job request.</inlineHelpText>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>