force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Button_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Button_Text_Color__c</fullName>
    <defaultValue>&quot;#000000&quot;</defaultValue>
    <description>Use this color as button label color.</description>
    <inlineHelpText>Select a color to use for the button labels in the survey response interface. This customization option allows you to choose a color that aligns with your branding or design preferences, enhancing the visual appeal and usability of the survey for participants.</inlineHelpText>
    <label>Button Text Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>