force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__C_All_Questions_Required__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_All_Questions_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, all questions in the survey have to be responded.</description>
    <inlineHelpText>Enabling this option will make all questions in the survey mandatory. When this setting is enabled, the individual question-level mandatory settings will be ignored.</inlineHelpText>
    <label>All Questions Required</label>
    <type>Checkbox</type>
</CustomField>