force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Captcha_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Captcha_Message__c</fullName>
    <defaultValue>$Label.ArdiraSurvey__Captcha_Default_Message</defaultValue>
    <description>Store reCaptcha Message.</description>
    <inlineHelpText>Enter the text to display in the Captcha interface. This message will be shown to participants as instructions or information regarding the Captcha verification process.</inlineHelpText>
    <label>Captcha Message</label>
    <type>TextArea</type>
</CustomField>