force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CBackground_Image_Alignment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CBackground_Image_Alignment__c</fullName>
    <description>Alignment of the background image used during survey response.</description>
    <inlineHelpText>Background image alignment.</inlineHelpText>
    <label>Background Image Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fit</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
                <default>true</default>
                <label>Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>