force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CColor_Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CColor_Answer_Text__c</fullName>
    <defaultValue>&quot;#000000&quot;</defaultValue>
    <description>Color to be used for answer text.</description>
    <inlineHelpText>Choose a color for the answer text in the survey response. This allows you to customize the appearance of the answer text and ensure it is easily readable and visually appealing to participants.</inlineHelpText>
    <label>Answer Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>