force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CColor_Background__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CColor_Background__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Background color to be used.</description>
    <inlineHelpText>Choose a color to set as the background color for the survey responder interface. This allows you to create a visually appealing and cohesive design for the survey interface.</inlineHelpText>
    <label>Background Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>