force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CColor_Button_Background__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CColor_Button_Background__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Color to be used for button background.</description>
    <inlineHelpText>Choose a background color to be applied to the navigation buttons in the survey response interface. This customization option allows you to style the buttons according to your desired color scheme or branding.</inlineHelpText>
    <label>Button Background Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>