force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CColor_Question_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CColor_Question_Text__c</fullName>
    <defaultValue>&quot;#000000&quot;</defaultValue>
    <description>Color to be used for question text.</description>
    <inlineHelpText>Choose a color to be used for the text of the survey questions in the survey response interface. This allows you to customize the appearance and readability of the question text to suit your design preferences.</inlineHelpText>
    <label>Question Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>