force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CColor_Section_Background__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CColor_Section_Background__c</fullName>
    <defaultValue>&quot;#03ABFF&quot;</defaultValue>
    <description>Section background color.</description>
    <inlineHelpText>Choose a background color to apply to the section area in the survey response interface. This allows you to differentiate sections visually and create a cohesive design for the survey. By selecting a specific background color for the section area, you can make it stand out and enhance the overall user experience during the survey response process.</inlineHelpText>
    <label>Section Background</label>
    <length>40</length>
    <type>Text</type>
</CustomField>