force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CColor_Section_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CColor_Section_Text__c</fullName>
    <defaultValue>&quot;#000000&quot;</defaultValue>
    <description>Section text color.</description>
    <inlineHelpText>Choose a color for the text displayed in the section area of the survey response interface. This allows you to customize the appearance of the section text and ensure it is visually distinguishable from the background color. By selecting an appropriate text color, you can improve readability and ensure a cohesive design for the survey.</inlineHelpText>
    <label>Section Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>