force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CEven_Question_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CEven_Question_Background_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Select background color to use for even questions e.g. 2, 4, 6…</description>
    <inlineHelpText>Choose a background color to be used for even-numbered questions (e.g., 2, 4, 6...) in the survey response. This allows you to differentiate the appearance of even questions from odd questions, creating a visually distinct layout for a better user experience.</inlineHelpText>
    <label>Even Question Background</label>
    <length>40</length>
    <type>Text</type>
</CustomField>