force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CFont_Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CFont_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Font size to use (in em).</description>
    <inlineHelpText>Specify the font size (in em) to be used for the question and response text in the survey. This allows you to adjust the size of the text to achieve the desired visual appearance and readability in the survey interface.</inlineHelpText>
    <label>Font Size</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>