force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CFont_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CFont_Type__c</fullName>
    <description>Font to be used for displaying the survey.</description>
    <inlineHelpText>Select a font family to use for a question and response text.</inlineHelpText>
    <label>Font Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>