force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CL_Default_Language__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CL_Default_Language__c</fullName>
    <description>Default language of the survey.</description>
    <inlineHelpText>Select the language that you used to author all questions in the main survey interface. This language will be selected as the default response language unless overwritten using other ways when sending a survey.</inlineHelpText>
    <label>Default Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArdiraSurvey__Survey_Languages</valueSetName>
    </valueSet>
</CustomField>