force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CL_Default_Language_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CL_Default_Language_Identifier__c</fullName>
    <description>JSON mapping of one or more objects API name  and the corresponding API name of the field on that object that will contain the language to be used as a default language.</description>
    <inlineHelpText>Map one or more objects API name  and the corresponding API name of the field on that object that will contain the language to be used as a default language.</inlineHelpText>
    <label>Default Language Identifier</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>