force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CL_Supported_Languages__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CL_Supported_Languages__c</fullName>
    <description>Languages supported for this survey. You need to upload the survey translations in the supported languages.</description>
    <inlineHelpText>Languages supported for the survey.</inlineHelpText>
    <label>Supported Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArdiraSurvey__Survey_Languages</valueSetName>
    </valueSet>
</CustomField>