force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CN_Distribution_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CN_Distribution_Email_Template__c</fullName>
    <description>Name of the template used to notify the assignee that a survey has been assigned to them.</description>
    <inlineHelpText>When the notification email sender is set to &quot;This Survey Settings&quot;, select the email template from the Survey Email Templates folder to use for sending notifications to participants.</inlineHelpText>
    <label>Notification Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>