force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CN_Distribution_Email_Template_Map__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CN_Distribution_Email_Template_Map__c</fullName>
    <description>JSON map of languages and the email templates to use when sending notification to a participant.</description>
    <inlineHelpText>JSON map of languages and the email templates to use when sending notification to a participant. You can pick an email template located in the Survey Email Templates folder.</inlineHelpText>
    <label>Notification Email Template Map</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>