force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Allow_To_Advance_With_Incomplete_Q__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Allow_To_Advance_With_Incomplete_Q__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, allows to move to next question/section even if question is not complete.</description>
    <inlineHelpText>Enable this option to allow participants to skip incomplete questions and proceed to the next question. By enabling this setting, participants can advance through the survey without being required to provide a response for every question. This can be useful in cases where participants may not have an answer or prefer to skip certain questions.</inlineHelpText>
    <label>Skip Incomplete Questions</label>
    <type>Checkbox</type>
</CustomField>