force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Next_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Next_Button_Label__c</fullName>
    <defaultValue>&quot;Next&quot;</defaultValue>
    <description>Label for the &quot;Next&quot; button.</description>
    <inlineHelpText>Specify the label to be displayed on the &apos;Next&apos; button in the survey response interface. This button allows participants to advance to the next question or page within the survey. Choose a concise and descriptive label that prompts participants to proceed with the survey.</inlineHelpText>
    <label>Next Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>