force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Pagination__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Pagination__c</fullName>
    <description>Method of paginating through survey questions.</description>
    <inlineHelpText>Choose the preferred navigation style for the survey response interface:
No Pagination: Participants can view and respond to all the questions on a single page.
Question: Participants can view and respond to one question at a time, navigating through the survey using previous and next buttons.
Section: Participants can view and respond to all questions within a section at a time, navigating through the survey using previous and next buttons.
Select the option that best suits survey format.</inlineHelpText>
    <label>Pagination</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Pagination</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
                <default>true</default>
                <label>Question</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>