force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Prev_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Prev_Button_Label__c</fullName>
    <defaultValue>&quot;Prev&quot;</defaultValue>
    <description>Label to use for the &apos;previous&apos; button in the survey response interface.</description>
    <inlineHelpText>Specify the label to be used for the &apos;previous&apos; button in the survey response interface. This button allows participants to navigate to the previous question or section in the survey.</inlineHelpText>
    <label>Prev Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>