force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Save_Draft_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Save_Draft_Button_Label__c</fullName>
    <description>Though responses are automatically saved, you can set a label here to explicitly show Save Draft button for participants to save responses.</description>
    <inlineHelpText>Specify the label to be used for the &apos;save draft&apos; button in the survey response interface. This button allows participants to explicitly save their responses as a draft, even though responses are automatically saved. Providing this button gives participants the option to save their progress and return to complete the survey at a later time.</inlineHelpText>
    <label>Save Draft Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>