force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Section_Display_Options__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Section_Display_Options__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <description>Show Section list as per selection.</description>
    <inlineHelpText>Choose the preferred section display option in the survey response interface:
None: No section display is shown.
Horizontal Path: Sections are displayed in a horizontal path, allowing participants to see their progress through the survey.
Vertical Tab: Sections are displayed as vertical tabs, providing a clear overview of the survey&apos;s structure.
Note that section display options are applicable only if the section-level navigation option is selected.</inlineHelpText>
    <label>Section Display Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Horizontal Path</fullName>
            </value>
            <value>
                <fullName>Vertical Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>