force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Show_Section_List__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Show_Section_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Section list or not.</description>
    <inlineHelpText>Enable to display list of sections in the survey response interface. This will be applicable only if the section level navigation option is selected.</inlineHelpText>
    <label>Dep Show Section List</label>
    <type>Checkbox</type>
</CustomField>