force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CNav_Submit_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CNav_Submit_Button_Label__c</fullName>
    <defaultValue>&quot;Submit&quot;</defaultValue>
    <description>Label to use for the &apos;submit&apos; button in the survey response interface.</description>
    <inlineHelpText>Specify the label to be displayed on the &apos;Submit&apos; button in the survey response interface. This button is typically shown on the final page of the survey and allows participants to submit their completed responses. Choose a clear and engaging label that encourages participants to finalize and submit their survey.</inlineHelpText>
    <label>Submit Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>