force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CO_Scoring_Method__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CO_Scoring_Method__c</fullName>
    <defaultValue>&quot;Raw&quot;</defaultValue>
    <description>Raw (aggregates raw score), Percentage (percentage for a question and averages for section)</description>
    <inlineHelpText>Raw - Calculates and aggregates raw scores
Percentage - Calculates and aggregates percentage scores</inlineHelpText>
    <label>Scoring Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw</fullName>
                <default>true</default>
                <label>Raw</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>No Scoring</fullName>
                <isActive>false</isActive>
                <label>No Scoring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>