force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__COdd_Even_Options__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__COdd_Even_Options__c</fullName>
    <description>This setting determines how questions are classified as odd or even for the purpose of setting background colors.
Odd-Even Over Entire Survey: Questions will be classified as odd or even based on their sequential order throughout the entire survey.
Odd-Even Each Section Separately: Questions will be classified as odd or even based on their sequential order within each section separately.</description>
    <inlineHelpText>This setting determines how questions are classified as odd or even for the purpose of setting background colors.
Odd-Even Over Entire Survey: Questions will be classified as odd or even based on their sequential order throughout the entire survey.
Odd-Even Each Section Separately: Questions will be classified as odd or even based on their sequential order within each section separately.</inlineHelpText>
    <label>Odd-Even Question Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Odd-Even Over Entire Survey</fullName>
                <default>true</default>
                <label>Odd-Even Over Entire Survey</label>
            </value>
            <value>
                <fullName>Odd-Even Each Section Separately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>