force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__COdd_Question_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__COdd_Question_Background_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Select a background color to use for the odd questions e.g. 1, 3, 5…</description>
    <inlineHelpText>Choose a background color to be used for the odd-numbered questions (e.g., 1, 3, 5...) in the survey response interface. This allows you to differentiate the odd questions from the even questions visually, providing a clear and organized presentation of the survey content.</inlineHelpText>
    <label>Odd Question Background</label>
    <length>40</length>
    <type>Text</type>
</CustomField>