force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Community_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_Id__c</fullName>
    <description>Survey is associated with this community.</description>
    <inlineHelpText>Survey is associated with this community.</inlineHelpText>
    <label>Community Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>