force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Community_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_Login_URL__c</fullName>
    <description>Login URL of the community associated with this survey. Automatically populated in the trigger after Community Id field is populated. When an unauthenticated user clicks a response link requiring authentication, they are redirected to this URL.</description>
    <inlineHelpText>Login URL of the community associated with this survey.</inlineHelpText>
    <label>Community Login URL</label>
    <type>Url</type>
</CustomField>