force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Community_Response_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_Response_URL__c</fullName>
    <description>Survey Response URL to be used by authenticated and unauthenticated community users.</description>
    <formula>(ArdiraSurvey__Community_URL__c &amp; IF( ISBLANK(ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c), &quot;/ArdiraSurvey/SurveyResponse.app&quot;, ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c) &amp; &quot;?recordId=&quot; &amp; Id &amp;&quot;&amp;logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; IF(ArdiraSurvey__CS_Do_Not_Require_Authentication__c = False, &quot;&amp;ut=&quot; &amp; text((CreatedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 86400), &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Survey Response URL to be used by authenticated and unauthenticated community users.</inlineHelpText>
    <label>Community Response URL</label>
    <type>Text</type>
</CustomField>