force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Community_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Community_URL__c</fullName>
    <description>URL of the community associated with this survey. Automatically populated in the trigger after Community Id field is populated.</description>
    <inlineHelpText>URL of the community associated with this survey.</inlineHelpText>
    <label>Community URL</label>
    <type>Url</type>
</CustomField>