force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Container_Width__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Container_Width__c</fullName>
    <defaultValue>100</defaultValue>
    <description>This setting enables you to restrict the overall width of the survey responder interface when viewed on a respondent&apos;s desktop device. It&apos;s important to be aware that this setting does not affect the survey responder interface when accessed on a mobile device.</description>
    <inlineHelpText>Adjust the width of the survey responder interface to suit your preferences on desktop devices. This setting allows you to specify the width as a percentage relative to the screen area, ensuring optimal presentation.</inlineHelpText>
    <label>Desktop Survey Interface Width (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>