force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CS_Anonymize_Responses__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CS_Anonymize_Responses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a responder’s identity is not associated with the responder’s response record. Note that when explicit survey assignments are created, a responder’s identity is attached to the responder’s response record.</description>
    <inlineHelpText>Enable to not associate a participants&apos; identify with a survey response records. Note that when explicit survey assignments are created, a participants&apos; identity is attached to the participants&apos; survey response records.</inlineHelpText>
    <label>Dep Anonymize Responses</label>
    <type>Checkbox</type>
</CustomField>