force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CS_Do_Not_Require_Authentication__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CS_Do_Not_Require_Authentication__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, unauthenticated users maybe able to respond based on other configuration</description>
    <inlineHelpText>Enabling this feature allows external participants who are not logged in or registered users to provide feedback or complete the survey without requiring authentication.</inlineHelpText>
    <label>Allow Unauthenticated Responders</label>
    <type>Checkbox</type>
</CustomField>