force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CS_Open_to_Unassigned_Responders__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CS_Open_to_Unassigned_Responders__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, a unique assignment link (i.e. existence of Survey Result record) is not required to respond. Based on other configuration, a user may be able to respond as long as s/he has a right survey response link (for internal user or community user). Note that assigned responders can still be able to respond irrespective of this setting.</description>
    <inlineHelpText>Enables a participant to respond to the survey by clicking the public survey response link. Does not require the participant to authenticate and identify using her Salesforce credentials.</inlineHelpText>
    <label>Open to Unassigned Participants</label>
    <type>Checkbox</type>
</CustomField>