force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CT_Allowed_Time_to_Respond_Days__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CT_Allowed_Time_to_Respond_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The survey response is due in this many days after it is assigned to a participant.</description>
    <inlineHelpText>Specify the number of days after survey assignment that a survey response is marked as due for participants. This setting determines the timeframe within which participants are expected to complete and submit their survey responses.</inlineHelpText>
    <label>Response Time Limit (in days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>