force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CT_Auto_Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CT_Auto_Archive_Date__c</fullName>
    <description>Survey status is set to &quot;Archived&quot; on this date.</description>
    <inlineHelpText>A survey status will be automatically set to ‘Archived’ on this date. An archived survey can not be assigned to new participants. Participants who are working on an archived survey will not be able to complete  the survey.</inlineHelpText>
    <label>Auto Archive Date</label>
    <type>Date</type>
</CustomField>