force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__CT_Auto_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__CT_Auto_Close_Date__c</fullName>
    <description>Survey status is set to &quot;Closed&quot; on this date.</description>
    <inlineHelpText>Set a date for automatic survey closure. After this date, the survey status will be changed to &apos;Closed&apos;. Existing participants can still complete the survey, but new participant assignments will not be allowed.</inlineHelpText>
    <label>Auto Close Date</label>
    <type>Date</type>
</CustomField>