force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Custom_Font__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Custom_Font__c</fullName>
    <description>Specify a custom font family to use for a question and response text.</description>
    <inlineHelpText>Specify a custom font family to use for a question and response text.</inlineHelpText>
    <label>Custom Font</label>
    <length>75</length>
    <type>Text</type>
</CustomField>