force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Custom_Scoring_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Custom_Scoring_Class_Name__c</fullName>
    <description>Name of the class implementing SurveyScoringInterface. When scoring survey responses, this class will be invoked.</description>
    <inlineHelpText>To customize a survey scoring, set name of a class implementing SurveyScoringInterface. When scoring survey responses, this class will be invoked.</inlineHelpText>
    <label>Custom Scoring Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>